refactor[BE]: Refactor assignment questions API to use user assignments context
and generate new openapi docs
