# backend/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_06_19_172654) do
+ActiveRecord::Schema[8.0].define(version: 2025_06_19_212923) do
   create_table "assignment_questions", force: :cascade do |t|
     t.integer "assignment_id", null: false
     t.string "question_content"
@@ -35,6 +35,8 @@ ActiveRecord::Schema[8.0].define(version: 2025_06_19_172654) do
     t.boolean "correct"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.integer "assignment_id", null: false
+    t.index ["assignment_id"], name: "index_user_assignment_questions_on_assignment_id"
     t.index ["assignment_question_id"], name: "index_user_assignment_questions_on_assignment_question_id"
     t.index ["user_assignment_id"], name: "index_user_assignment_questions_on_user_assignment_id"
   end
@@ -71,6 +73,7 @@ ActiveRecord::Schema[8.0].define(version: 2025_06_19_172654) do
 
   add_foreign_key "assignment_questions", "assignments"
   add_foreign_key "user_assignment_questions", "assignment_questions"
+  add_foreign_key "user_assignment_questions", "assignments"
   add_foreign_key "user_assignment_questions", "user_assignments"
   add_foreign_key "user_assignment_sessions", "user_assignments"
   add_foreign_key "user_assignments", "assignments"
